Fixing scroll and z-index issues found by Kevin for Windows Chromers.

--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -137,6 +137,5 @@
 		@include dialog-sprite(#{$prefix}talk#{$number}); 
 		@include set-dimensions(image-width(sprite-file($dialog-sprites, #{$prefix}talk#{$number})), $instructions-height, $ui-width);
 		@include set-bg-width($dialog-sprite-width, $dialog-sprite, #{$prefix}talk#{$number});
-		@include offsetLeft(23px, $instructions-width);
 	}
 }
